kaikki pelittää, muotoilut ok

--- a/palvelut.html
+++ b/palvelut.html
@@ -94,14 +94,14 @@
           <a class="btn btn-outline-secondary omaBtn m-4" href="./yhteystiedot.html">Pyydä tarjous</a>
         </div>
       </div>
-      <div class="col-12 col-sm-4 py-5 border-top palvelutImgDiv d-flex justify-content-center" id="">
+      <div class="col-11 col-sm-4 py-5 border-top palvelutImgDiv d-flex justify-content-center" id="">
         <img class="img-fluid palvelutImg " id="" src="./assets/pexels-kseniachernaya-5691597.jpg" />
       </div>
     </div>
 
     <!-- tällä rivillä tiedot tapetointipalveluista ja siihen liittyvä kuva -->
     <div class="row p-2 justify-content-center">
-      <div class="col-12 col-sm-4 py-5 border-top palvelutImgDiv d-flex justify-content-center" id="">
+      <div class="col-11 col-sm-4 py-5 border-top palvelutImgDiv d-flex justify-content-center" id="">
         <img class="img-fluid palvelutImg" id="" src="./assets/pexels-curt-hubner-39375428-20806624.jpg" />
       </div>
       <div class="col-12 col-sm-4 py-5 d-flex align-items-center justify-content-center border-top">
@@ -137,10 +137,10 @@
                   <h5 style="font-weight: bold;">löydät meidät somesta</h5>
                   <ul class="list-unstyled">
                       <li class="mb-2">
-                          <a href=""><i class="bi bi-instagram"></i> Instagram</a>
+                          <a target="_blank" href="https://www.instagram.com/osaoinstagram/"><i class="bi bi-instagram"></i> Instagram</a>
                       </li>
                       <li class="mb-2">
-                          <a href=""><i class="bi bi-youtube"></i> YouTube</a>
+                          <a target="_blank" href="https://www.youtube.com/user/osaotube"><i class="bi bi-youtube"></i> YouTube</a>
                       </li>
                   </ul>
               </div>
