--- a/testaus.html
+++ b/testaus.html
@@ -29,23 +29,37 @@
             </div>
             <div class="col-2 my-auto navLinks d-flex justify-content-center"><a
                     href="./yhteystiedot.html">Yhteystiedot</a></div>
-        </div>
+            </div>
   
-    </div>
-    </div>
-    <div class="hamburgerDiv container-fluid">
-        <button id="hamburger"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
-                stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24"
-                stroke-width="2">
-                <path d="M4 6l16 0"></path>
-                <path d="M4 12l16 0"></path>
-                <path d="M4 18l16 0"></path>
-            </svg> </button>
+        </div>
+      </div>
+      <!-- tässä hampurilaisnappula -->
+    <div class="hamburgerDiv py-2 container-fluid justify-content-center border-bottom">
+      <div class="row py-2 justify-content-center align-items-center text-align-center">
+        <div class="col-2 my-auto navLinks d-flex justify-content-center" id="hamburgerButton">
+          <img id="hamburgerSVG" src="./assets/hamburger-lg-svgrepo-com.svg" alt="Hamburger navigation icon" style="height: 40px; width: 40px;"/>
+        </div>
+      </div>
+  
+        <!-- Hampurilaisen avattu navigointi -->
+        <div class="row py-4 justify-content-center" id="hamburgerNavbar">
+          <div class="col-12 my-auto navLinks d-flex justify-content-center"><a href="./index.html">Etusivu</a></div>
+          <div class="col-12 my-auto navLinks d-flex justify-content-center"><a href="./palvelut.html">Palvelut</a>
+          </div>
+          <div class="col-12 my-auto navLinks d-flex justify-content-center"><a href="./testaus.html">Värien
+                  testaus</a></div>
+          <div class="col-12 my-auto navLinks d-flex justify-content-center"><a href="./galleria.html">Galleria</a>
+          </div>
+          <div class="col-12 my-auto navLinks d-flex justify-content-center"><a
+                  href="./yhteystiedot.html">Yhteystiedot</a></div>
+          </div>
+  
+      </div>
     </div>
 
     <!-- tässä banneri -->
     <div class="container-fluid position-relative" id="middleContainerDiv">
-        <div class="row my-4 justify-content-center">
+        <div class="row my-2 justify-content-center">
             <div class="position-relative" id="testausHeaderImgDiv">
                 <img class="img-fluid mx-auto" id="testausHeaderImg"
                     src="./assets/pexels-wildlittlethingsphoto-9492914_cropped2.jpg" />
@@ -62,7 +76,7 @@
         <!-- Lyhyt kuvaus, fonttikokoa taas muokattu isommaksi kuin tehtävänannossa -->
         <div class="row my-4 justify-content-center">
             <div id="testausHeaderTextSmallDiv">
-                <h3 id="testausHeaderTextSmall">Päästä sisäinen sisustajasi valloilleen ja testaa villeimmätkin väri-ideasi täällä.</h3>
+                <h3 id="testausHeaderTextSmall">Päästä sisäinen sisustajasi valloilleen ja testaa villeimmätkin väri-ideasi kätevällä testauspohjallamme.</h3>
             </div>
         </div>
         <!-- tässä vasemmanpuoleinen testaussetti -->
@@ -224,9 +238,9 @@
     <!-- tästä alkaa footer -->
     <div class="container-fluid px-0 " id="footerContainer">
         <footer class="footer position-absolute" id="footer">
-
-            <div class="row p-4 mx-0">
-                <div class="col-lg-4 col-md-12">
+  
+            <div class="row p-4">
+                <div class="col-lg-4 col-md-12 mb-4">
                     <h5 style="font-weight: bold;">Kotkantien maalaus ja tapetointi</h5>
                     <div>
                         <p>Kotkantie 3</p>
@@ -235,14 +249,14 @@
                         <div><i class="bi bi-envelope"></i> info@kotkantienmaalaus.fi</div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-4 col-md-6 mb-4">
                     <h5 style="font-weight: bold;">löydät meidät somesta</h5>
                     <ul class="list-unstyled">
                         <li class="mb-2">
-                            <a href=""><i class="bi bi-instagram"></i> Instagram</a>
+                            <a target="_blank" href="https://www.instagram.com/osaoinstagram/"><i class="bi bi-instagram"></i> Instagram</a>
                         </li>
                         <li class="mb-2">
-                            <a href=""><i class="bi bi-youtube"></i> YouTube</a>
+                            <a target="_blank" href="https://www.youtube.com/user/osaotube"><i class="bi bi-youtube"></i> YouTube</a>
                         </li>
                     </ul>
                 </div>
