--- a/galleria.html
+++ b/galleria.html
@@ -28,23 +28,37 @@
           </div>
           <div class="col-2 my-auto navLinks d-flex justify-content-center"><a
                   href="./yhteystiedot.html">Yhteystiedot</a></div>
-      </div>
+          </div>
 
-  </div>
-  </div>
-  <div class="hamburgerDiv container-fluid">
-      <button id="hamburger"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
-              stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24"
-              stroke-width="2">
-              <path d="M4 6l16 0"></path>
-              <path d="M4 12l16 0"></path>
-              <path d="M4 18l16 0"></path>
-          </svg> </button>
+      </div>
+    </div>
+    <!-- tässä hampurilaisnappula -->
+  <div class="hamburgerDiv py-2 container-fluid justify-content-center border-bottom">
+    <div class="row py-2 justify-content-center align-items-center text-align-center">
+      <div class="col-2 my-auto navLinks d-flex justify-content-center" id="hamburgerButton">
+        <img id="hamburgerSVG" src="./assets/hamburger-lg-svgrepo-com.svg" alt="Hamburger navigation icon" style="height: 40px; width: 40px;"/>
+      </div>
+    </div>
+
+      <!-- Hampurilaisen avattu navigointi -->
+      <div class="row py-4 justify-content-center" id="hamburgerNavbar">
+        <div class="col-12 my-auto navLinks d-flex justify-content-center"><a href="./index.html">Etusivu</a></div>
+        <div class="col-12 my-auto navLinks d-flex justify-content-center"><a href="./palvelut.html">Palvelut</a>
+        </div>
+        <div class="col-12 my-auto navLinks d-flex justify-content-center"><a href="./testaus.html">Värien
+                testaus</a></div>
+        <div class="col-12 my-auto navLinks d-flex justify-content-center"><a href="./galleria.html">Galleria</a>
+        </div>
+        <div class="col-12 my-auto navLinks d-flex justify-content-center"><a
+                href="./yhteystiedot.html">Yhteystiedot</a></div>
+        </div>
+
+    </div>
   </div>
 
   <!-- sivun banneri, h1 fonttikoko tietoisesti laitettu isommaksi kuin tehtävänannossa -->
   <div class="container-fluid position-relative" id="middleContainerDiv">
-    <div class="row my-4 justify-content-center">
+    <div class="row my-2 justify-content-center">
       <div class="position-relative" id="galleriaHeaderImgDiv">
         <img class="img-fluid mx-auto" id="galleriaHeaderImg"
           src="./assets/pexels-pixabay-260046_suurempi_cropped2.jpg" />
@@ -177,48 +191,48 @@
 
   </div>
 
-  <!-- tästä alkaa footer -->
-  <div class="container-fluid px-0 " id="footerContainer">
-    <footer class="footer position-absolute" id="footer">
+    <!-- tästä alkaa footer -->
+    <div class="container-fluid px-0 " id="footerContainer">
+      <footer class="footer position-absolute" id="footer">
 
-      <div class="row p-4 mx-0">
-        <div class="col-lg-4 col-md-12 mb-4">
-          <h5>Kotkantien maalaus ja tapetointi</h5>
-          <div>
-            <p>Kotkantie 3</p>
-            <p>90100 Oulu</p>
-            <div><i class="bi bi-telephone"></i> 044 999 888 99</div>
-            <div><i class="bi bi-envelope"></i> info@kotkantienmaalaus.fi</div>
+          <div class="row p-4">
+              <div class="col-lg-4 col-md-12 mb-4">
+                  <h5 style="font-weight: bold;">Kotkantien maalaus ja tapetointi</h5>
+                  <div>
+                      <p>Kotkantie 3</p>
+                      <p>90100 Oulu</p>
+                      <div><i class="bi bi-telephone"></i> 044 999 888 99</div>
+                      <div><i class="bi bi-envelope"></i> info@kotkantienmaalaus.fi</div>
+                  </div>
+              </div>
+              <div class="col-lg-4 col-md-6 mb-4">
+                  <h5 style="font-weight: bold;">löydät meidät somesta</h5>
+                  <ul class="list-unstyled">
+                      <li class="mb-2">
+                          <a target="_blank" href="https://www.instagram.com/osaoinstagram/"><i class="bi bi-instagram"></i> Instagram</a>
+                      </li>
+                      <li class="mb-2">
+                          <a target="_blank" href="https://www.youtube.com/user/osaotube"><i class="bi bi-youtube"></i> YouTube</a>
+                      </li>
+                  </ul>
+              </div>
+              <div class="col-lg-4 col-md-6 mb-4">
+                  <h5 style="font-weight: bold;">olemme avoinna</h5>
+                  <table class="table">
+                      <tbody>
+                          <tr>
+                              <td>Ma - Pe:</td>
+                              <td>9:00 - 18:00</td>
+                          </tr>
+                          <tr>
+                              <td>La - Su:</td>
+                              <td>Sopimuksen mukaan</td>
+                          </tr>
+                      </tbody>
+                  </table>
+              </div>
           </div>
-        </div>
-        <div class="col-lg-4 col-md-6 mb-4">
-          <h5>löydät meidät somesta</h5>
-          <ul class="list-unstyled">
-            <li class="mb-2">
-              <a href=""><i class="bi bi-instagram"></i> Instagram</a>
-            </li>
-            <li class="mb-2">
-              <a href=""><i class="bi bi-youtube"></i> YouTube</a>
-            </li>
-          </ul>
-        </div>
-        <div class="col-lg-4 col-md-6 mb-4">
-          <h5>olemme avoinna</h5>
-          <table class="table">
-            <tbody>
-              <tr>
-                <td>Ma - Pe:</td>
-                <td>9:00 - 18:00</td>
-              </tr>
-              <tr>
-                <td>La - Su:</td>
-                <td>Sopimuksen mukaan</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </footer>
+      </footer>
   </div>
 
 
