--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="./css/navbar.css"> 
-    <link rel="stylesheet" type="text/css" href="./css/index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="./css/index.css">
     <title>Maalaus ja tapetointi</title>
 </head>
 
@@ -30,18 +29,39 @@
             <div class="col-2 my-auto navLinks d-flex justify-content-center"><a
                     href="./yhteystiedot.html">Yhteystiedot</a></div>
             </div>
-
+  
         </div>
+      </div>
+      <!-- tässä hampurilaisnappula -->
+    <div class="hamburgerDiv py-2 container-fluid justify-content-center border-bottom">
+      <div class="row py-2 justify-content-center align-items-center text-align-center">
+        <div class="col-2 my-auto navLinks d-flex justify-content-center" id="hamburgerButton">
+          <img id="hamburgerSVG" src="./assets/hamburger-lg-svgrepo-com.svg" alt="Hamburger navigation icon" style="height: 40px; width: 40px;"/>
+        </div>
+      </div>
+  
+        <!-- Hampurilaisen avattu navigointi -->
+        <div class="row py-4 justify-content-center" id="hamburgerNavbar">
+          <div class="col-12 my-auto navLinks d-flex justify-content-center"><a href="./index.html">Etusivu</a></div>
+          <div class="col-12 my-auto navLinks d-flex justify-content-center"><a href="./palvelut.html">Palvelut</a>
+          </div>
+          <div class="col-12 my-auto navLinks d-flex justify-content-center"><a href="./testaus.html">Värien
+                  testaus</a></div>
+          <div class="col-12 my-auto navLinks d-flex justify-content-center"><a href="./galleria.html">Galleria</a>
+          </div>
+          <div class="col-12 my-auto navLinks d-flex justify-content-center"><a
+                  href="./yhteystiedot.html">Yhteystiedot</a></div>
+          </div>
+  
+      </div>
     </div>
-    <div class="hamburgerDiv container-fluid">
-        <button id="hamburger"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2"> <path d="M4 6l16 0"></path> <path d="M4 12l16 0"></path> <path d="M4 18l16 0"></path> </svg> </button>
-        </div>
+  
 
     <!-- tässä etusivun kuva ja yrityksen nimi -->
     <div class="container-fluid position-relative" id="middleContainerDiv">
         <div class="row justify-content-center">
             <div class="position-relative" id="headerImgDiv">
-                <img class="img-fluid mx-auto" id="headerImg" src="./assets/pexels-ivan-samkov-5798984_cropped.jpg" />
+                <img class="img-fluid mx-auto" id="headerImg" src="./assets/pexels-ivan-samkov-5798984.jpg" />
                 <div class="position-absolute m-3" id="headerTextDiv">
                     <!-- tämän h1 otsikon koko eri kuin tehtävänannossa, etusivu olisi näyttänyt tosi kököltä liian pienen tekstin kanssa, eli otin tietoisen irtioton tehtävänannosta tässä kohtaa. -->
                     <h1 id="headerText">Kotkantien maalaus ja tapetointi</h1>
@@ -57,10 +77,10 @@
     <!-- tästä alkaa footer -->
     <div class="container-fluid px-0 " id="footerContainer">
         <footer class="footer position-absolute" id="footer">
-
+  
             <div class="row p-4">
                 <div class="col-lg-4 col-md-12 mb-4">
-                    <h5>Kotkantien maalaus ja tapetointi</h5>
+                    <h5 style="font-weight: bold;">Kotkantien maalaus ja tapetointi</h5>
                     <div>
                         <p>Kotkantie 3</p>
                         <p>90100 Oulu</p>
@@ -69,18 +89,18 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
-                    <h5>löydät meidät somesta</h5>
+                    <h5 style="font-weight: bold;">löydät meidät somesta</h5>
                     <ul class="list-unstyled">
                         <li class="mb-2">
-                            <a href=""><i class="bi bi-instagram"></i> Instagram</a>
+                            <a target="_blank" href="https://www.instagram.com/osaoinstagram/"><i class="bi bi-instagram"></i> Instagram</a>
                         </li>
                         <li class="mb-2">
-                            <a href=""><i class="bi bi-youtube"></i> YouTube</a>
+                            <a target="_blank" href="https://www.youtube.com/user/osaotube"><i class="bi bi-youtube"></i> YouTube</a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
-                    <h5>olemme avoinna</h5>
+                    <h5 style="font-weight: bold;">olemme avoinna</h5>
                     <table class="table">
                         <tbody>
                             <tr>
